--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    
+    <img src="/images/lasagna.jpg" alt="Freshly made lasagna" height="300" width="300">
 </body>
 </html>
