Added a Description, Ingredients, and Steps section to lasagna.html

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,25 @@
 <body>
     <h1>Lasagna</h1>
     <img src="/images/lasagna.jpg" alt="Freshly made lasagna" height="300" width="300">
+        <h2>Description</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo eaque debitis dolor illo quaerat iste rerum maiores consequuntur commodi omnis iusto cupiditate corporis inventore, aliquid quis aut eum dolorum assumenda!</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem ipsum dolor sit.</li>
+                <li>Lorem ipsum dolor sit.</li>
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>Lorem ipsum dolor, sit amet</li>
+                <li>Lorem ipsum dolor, sit amet</li>
+                <li>Lorem ipsum dolor, sit amet</li>
+                <li>Lorem ipsum dolor, sit amet</li>
+                <li>Lorem ipsum dolor, sit amet</li>
+                <li>Lorem ipsum dolor, sit amet</li>
+                <li>Lorem ipsum dolor, sit amet</li>
+            </ol>
+
 </body>
 </html>
