--- a/recipes/hotdog.html
+++ b/recipes/hotdog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Hot Dog<h1>
-    <img src="" alt="" height="300" width="300">
+    <img src="/images/hotdog.jpg" alt="Hotdog with ketchup and mustard" height="300" width="300">
         <h2>Description</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo eaque debitis dolor illo quaerat iste rerum maiores consequuntur commodi omnis iusto cupiditate corporis inventore, aliquid quis aut eum dolorum assumenda!</p>
         <h2>Ingredients</h2>
