--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
     <a href="recipes/hotdog.html">Hot Dog</a>
+    <a href="recipes/grilledcheese.html">Grilled Cheese Sandwich</a>
 </body>
 </html>
