--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/hotdog.html">Hot Dog</a>
-    <a href="recipes/grilledcheese.html">Grilled Cheese Sandwich</a>
+        <ul> 
+            <li><a href="recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="recipes/hotdog.html">Hot Dog</a></li>
+            <li><a href="recipes/grilledcheese.html">Grilled Cheese Sandwich</a></li>
+        </ul>
 </body>
 </html>
