--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="images/lasagna.jpg" alt="Freshly made lasagna" height="300" width="300">
+    <img src="/images/lasagna.jpg" alt="Freshly made lasagna" height="300" width="300">
         <h2>Description</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo eaque debitis dolor illo quaerat iste rerum maiores consequuntur commodi omnis iusto cupiditate corporis inventore, aliquid quis aut eum dolorum assumenda!</p>
         <h2>Ingredients</h2>
