fixed the image src to the correct path

--- a/recipes/grilledcheese.html
+++ b/recipes/grilledcheese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Grilled Cheese Sandwich<h1>
-    <img src="images/grilledcheese.jpg" alt="Grilled cheese sandwich cut in half" height="300" width="300">
+    <img src="/images/grilledcheese.jpg" alt="Grilled cheese sandwich cut in half" height="300" width="300">
         <h2>Description</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo eaque debitis dolor illo quaerat iste rerum maiores consequuntur commodi omnis iusto cupiditate corporis inventore, aliquid quis aut eum dolorum assumenda!</p>
         <h2>Ingredients</h2>
