created a class for the links

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-        <ul> 
-            <li><a href="recipes/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/hotdog.html">Hot Dog</a></li>
-            <li><a href="recipes/grilledcheese.html">Grilled Cheese Sandwich</a></li>
-        </ul>
+       <div class="links"> 
+            <ul> 
+                <li><a href="recipes/lasagna.html">Lasagna</a></li>
+                <li><a href="recipes/hotdog.html">Hot Dog</a></li>
+                <li><a href="recipes/grilledcheese.html">Grilled Cheese Sandwich</a></li>
+            </ul>
+        </div>
 </body>
 </html>
